--- a/U4-S2-D5/wwwroot/css/site.css
+++ b/U4-S2-D5/wwwroot/css/site.css
@@ -17,6 +17,34 @@ html {
   min-height: 100%;
 }
 
-body {
-  margin-bottom: 60px;
+.main-content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
+
+body {
+    margin-bottom: 0;
+    background: url('/images/background.jpg') no-repeat center center fixed;
+    background-size: cover;
+}
+
+footer {
+    background-color: white;
+    color: black;
+    padding: 20px 0;
+    width: 100%;
+    text-align: center;
+    position: relative;
+    z-index: 10;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
