--- a/U4-S2-D5/wwwroot/css/site.css
+++ b/U4-S2-D5/wwwroot/css/site.css
@@ -46,5 +46,12 @@ html, body {
     flex-direction: column;
 }
 
+.shadow-image {
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
+    border-radius: 10px; 
+    transition: transform 0.3s ease-in-out; 
+}
+
+
 
 
