--- a/U4-S2-D5/Views/Prodotto/Dettagli.cshtml
+++ b/U4-S2-D5/Views/Prodotto/Dettagli.cshtml
@@ -25,6 +25,7 @@
                     <h2 class="card-title">@Model.Nome</h2>
                     <h4 class="text-primary">€@Model.Prezzo</h4>
                     <p class="card-text">@Model.Descrizione</p>
+                    <a href="@Url.Action("Modifica", "Prodotto", new { id = Model.Id })" class="btn btn-outline-warning mt-3">Modifica</a>
                     <a href="javascript:history.back()" class="btn btn-outline-dark mt-3">Torna indietro</a>
                 </div>
 
